# wc3_DataGen

./: .gitignore  CMakeLists.txt  listfile.txt  main.cpp  make.sh  makeData.sh  makeData_debug.sh  makeDatawar3files.sh  make_and_publish.sh  make_data.sh  make_listfile.sh
